# rs-eddit2telegram

./: .env.template  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
posters/: poster.rhai  poster.rhai.template
src/: db.rs  err.rs  main.rs  muxer.rs  re.rs  tg.rs
