[package]
name = "reddit2telegram"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
image = "0.25.10"
regex-lite = "0.1.9"
reqwest = { version = "0.13.4", features = ["json", "multipart"] }
rhai = "1.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
serde_json = "1.0.150"
sqlite = { version = "0.37.0", features = ["bundled"] }
tokio = "1.52.3"
